--- a/docs/css/section-colors.css
+++ b/docs/css/section-colors.css
@@ -91,3 +91,11 @@ html:not(.pm516a):not(.pm516b):not(.pm516home) .md-tabs {
   background-color: var(--md-primary-fg-color) !important;
   color: var(--md-default-text) !important;
 }
+
+[data-color-primary="blue"] {
+  --md-primary-fg-color: #1f3c88;
+}
+
+[data-color-primary="deep purple"] {
+  --md-primary-fg-color: #4b2e83;
+}
